# Personal_Projects

3d_cube/: CMakeLists.txt
3d_cube/include/glad/: glad.h
3d_cube/src/: main.cpp
OpenGL/basic_shapes/: CMakeLists.txt
OpenGL/basic_shapes/libs/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
OpenGL/basic_shapes/libs/docs/: Makefile
OpenGL/basic_shapes/libs/examples/: Makefile  cmake_install.cmake
OpenGL/basic_shapes/libs/src/: Makefile  cmake_install.cmake
OpenGL/basic_shapes/libs/tests/: Makefile  cmake_install.cmake
OpenGL/basic_shapes/src/: main.cpp
OpenGL/triangle/: CMakeLists.txt
OpenGL/triangle/src/: glad.c  main.cpp
flappyBird/: Assembly-CSharp.csproj
flappyBird/Assets/: birdLogic.cs  gameLogic.cs
flappyBird/Assets/Scenes/: SampleScene.unity
flappyBird/Assets/birdAnimation/: flappyBird-removebg-preview.asset
flappyBird/ProjectSettings/: TagManager.asset
flappyBird/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt
flappyBirdApplication/flappyBird/Assets/: collisionLogic.cs  pipe.prefab  pipeLogic.cs  pipeSpawnerLogic.cs
flappyBirdApplication/flappyBird/Assets/birdAnimation/: flappyBird2-removebg-preview.asset
flappyBirdApplication/flappyBird/ProjectSettings/: ProjectSettings.asset
flappyBirdApplication/flappyBird_Data/: app.info  globalgamemanagers.assets  level0  sharedassets0.assets.resS
flappyBird_Data/: boot.config  globalgamemanagers  sharedassets0.assets
linuxTerminal/: console  consoleProject.cpp
shell/: shell  shell.cpp
(+2 files in other folders)
